fixing scroll 'Others' on iPhone 6, 7, 8+

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -381,9 +381,18 @@ ul {
     color: rgb(128, 128, 128);
 }
 
-.noLineThree img,
-iframe {
+.noLineThree img {
     box-shadow: 0px 6px 25px 4px rgba(128, 128, 128);
+    width: 260px;
+    height: 146.3px;
+}
+
+.toRoll {
+    width: 100%;
+    height: 100%;
+}
+
+iframe {
     width: 260px;
     height: 146.3px;
 }
